# entanglement

./: .gitignore  Cargo.toml  LICENSE  README.md  clean.txt  deny.toml
api/: Cargo.toml
api/src/: album.rs  auth.rs  collection.rs  comment.rs  group.rs  image.rs  lib.rs  library.rs  log.rs  media.rs  search.rs  sort.rs  task.rs  ticket.rs  user.rs
common/: Cargo.toml
common/src/: config.rs  lib.rs  lockmap.rs  server.rs
common/src/api/: album.rs  comment.rs  library.rs  media.rs  mod.rs
common/src/auth/: cert.rs  gss.rs  ldap.rs  mod.rs  proxy.rs  tomlfile.rs  yamlfile.rs
common/src/config/: mod.rs
common/src/db/: mariadb.rs  mod.rs  mysql.rs  postgres.rs
common/src/media/: image.rs  mod.rs  video.rs
server/: Cargo.toml
server/src/: checks.rs  debug.rs  main.rs  service.rs
server/src/auth/: check.rs  mod.rs  msg.rs  svc.rs
server/src/cache/: mod.rs  msg.rs  svc.rs
server/src/db/: mariadb.rs  mod.rs  msg.rs  mysql.rs  query.rs  svc.rs
server/src/fs/: clean.rs  mod.rs  msg.rs  scan.rs  svc.rs
server/src/http/: api.rs  auth.rs  error.rs  mod.rs  msg.rs  stream.rs  svc.rs
server/src/service/: mod.rs  msg.rs
server/src/task/: clean.rs  mod.rs  msg.rs  scan.rs  scan_utils.rs  scrub.rs  svc.rs
src/: gallery.rs  main.rs
tools/: Cargo.toml
tools/auth/: Cargo.toml
tools/auth/src/: main.rs
tools/http/: Cargo.toml
tools/http/src/: main.rs  svc.rs
webapp/: Cargo.toml  Dioxus.toml
webapp/src/: admin.rs  albums.rs  gallery.rs  home.rs  library.rs  main.rs  nav.rs  settings.rs  status.rs  style.rs
webapp/src/album/: card.rs  detail.rs  grid.rs  list.rs  mod.rs  search.rs  table.rs
webapp/src/collection/: card.rs  detail.rs  grid.rs  mod.rs  search.rs
webapp/src/common/: colors.rs  list.rs  media.rs  mod.rs  sidebar.rs  storage.rs  stream.rs  style.rs
webapp/src/common/modal/: album.rs  comment.rs  contents.rs  media.rs  mod.rs  ticket.rs
webapp/src/common/style/: components.rs  home.rs  mod.rs  variables.rs
webapp/src/components/: advanced.rs  album_details.rs  comments.rs  confirmation_modal.rs  enhanced_media_modal.rs  media_card.rs  media_detail_modal.rs  mod.rs  modal.rs  navigation.rs  search.rs  search_bar.rs  sidebar.rs
webapp/src/components/modal/: albums.rs  collections.rs  comments.rs  enhanced_media_modal.rs  library.rs  media.rs  media_detail_modal.rs  mod.rs  search.rs
webapp/src/components/sidebar/: advanced.rs  mod.rs
webapp/src/gallery/: advanced.rs  album_details.rs  albums.rs  collections.rs  comments.rs  detail.rs  grid.rs  info.rs  media.rs  mod.rs  modern_detail.rs  modern_search.rs  related.rs  search.rs  similar.rs
webapp/src/ticket/: list.rs  mod.rs
webapp/src/tickets/: list.rs  mod.rs
