[workspace]
members = [ "api", "common",
    "server",
    "webapp",
]

resolver = "2"

[workspace.dependencies]
anyhow = "1.0.86"
async_cell = "0.2.2"
async-trait = "0.1.80"
axum = "0.8.4"
axum-macros = "0.5.0"
blockhash = "1.0.0"
chrono = "0.4.38"
clap = { version = "4.5.37", features = ["derive"] }
console-subscriber = "0.4.1"
constcat = "0.6.0"
dashmap = "6.1.0"
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-logger = "0.6.2"
dioxus-router = "0.6.2"
futures = "0.3.30"
futures-util = "0.3.30"
getrandom = { version = "0.2.15", features = ["js"] }
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
gloo-timers = "0.3.0"
hex = "0.4.3"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.4"
image = "0.25.6"
kamadak-exif = "0.6.1"
ldap3 = { version = "0.11.5", default-features = false, features = ["tls-rustls"] }
mime_guess = "2.0.5"
mysql_async = "0.36.0"
paste = "1.0.15"
rand = "0.9.1"
regex = "1.11.1"
ringbuffer = "0.15.0"
rustls = "0.21.12" # held back due to ldap3
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.11.0"
saphyr = "0.0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full", "tracing"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.11"
toml = "0.8.20"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
web-sys = { version = "0.3.77", features = ["Window"] }

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
