[package]
name = "api"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
anyhow = { workspace =  true }
gloo-net = { workspace =  true }
pastey = { workspace =  true }
regex = { workspace =  true }
serde = { workspace =  true, features = ["derive"] }
