[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }

anyhow = { workspace =  true }
async_cell = { workspace =  true }
async-trait = { workspace =  true }
blockhash = { workspace =  true }
chrono = { workspace =  true }
dashmap = { workspace =  true }
gloo-net = { workspace =  true }
hex = { workspace =  true }
image = { workspace =  true }
kamadak-exif = { workspace =  true }
ldap3 = { workspace =  true }
mysql_async = { workspace =  true }
paste = { workspace =  true }
regex = { workspace =  true }
rustls = "0.21.12"
rustls-pemfile = { workspace =  true }
rustls-pki-types = { workspace = true }
saphyr = { workspace =  true }
sha2 = { workspace =  true }
serde = { workspace =  true }
serde_json = { workspace =  true }
toml = { workspace =  true }
tokio = { workspace =  true }
tracing = { workspace =  true }
