[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
api = { path = "../api" }

anyhow = { workspace =  true }
async_cell = { workspace =  true }
async-trait = { workspace =  true }
blockhash = { workspace =  true }
chrono = { workspace =  true }
dashmap = { workspace =  true }
gloo-net = { workspace =  true }
hex = { workspace =  true }
image = { workspace =  true }
kamadak-exif = { workspace =  true }
ldap3 = { workspace =  true }
mysql_async = { workspace =  true }
pastey = { workspace =  true }
regex = { workspace =  true }
rustls = { workspace =  true }
rustls-pki-types = { workspace = true }
saphyr = { workspace =  true }
sha2 = { workspace =  true }
serde = { workspace =  true }
serde_json = { workspace =  true }
toml = { workspace =  true }
tokio = { workspace =  true }
tracing = { workspace =  true }
