[package]
name = "common"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[dependencies]
api = { path = "../api" }

anyhow = { workspace = true }
async_cell = { workspace = true }
async-trait = { workspace = true }
bb8 = { workspace = true }
bb8-postgres = { workspace = true }
blockhash = { workspace = true }
chrono = { workspace = true }
dashmap = { workspace = true }
gloo-net = { workspace = true }
hex = { workspace = true }
image = { workspace = true }
kamadak-exif = { workspace = true }
ldap3 = { workspace = true }
mysql_async = { workspace = true }
postgres = { workspace = true }
pastey = { workspace = true }
regex = { workspace = true }
rocksdb = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
saphyr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
