[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
common = { path = "../common" }
anyhow = "1.0.86"
async_cell = "0.2.2"
async-trait = "0.1.80"
axum = "0.8.1"
axum-macros = "0.5.0"
blockhash = "1.0.0"
chrono = "0.4.38"
dashmap = "6.1.0"
futures = "0.3.30"
futures-util = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.1"
hyper = { version = "1.3.1", features = ["full"] }
hyper-util = "0.1.4"
mime_guess = "2.0.5"
rand = "0.9.0"
regex = "1.11.1"
ringbuffer = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["full"] }
tokio-util = "0.7.11"
tower = "0.5.0"
tower-http = { version = "0.6.2", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
walkdir = "2.5.0"
sha2 = "0.10.8"
hex = "0.4.3"
