[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
api = { path = "../api" }
common = { path = "../common" }

anyhow = { workspace =  true }
async_cell = { workspace =  true }
async-trait = { workspace =  true }
axum = { workspace =  true }
axum-macros = { workspace =  true }
blockhash = { workspace =  true }
chrono = { workspace =  true }
clap = { workspace =  true, features = ["derive"] }
console-subscriber = { workspace =  true }
dashmap = { workspace =  true }
futures = { workspace =  true }
futures-util = { workspace =  true }
http = { workspace =  true }
http-body-util = { workspace =  true }
hyper = { workspace =  true, features = ["full"] }
hyper-util = { workspace =  true }
mime_guess = { workspace =  true }
rand = { workspace =  true }
regex = { workspace =  true }
ringbuffer = { workspace =  true }
serde = { workspace =  true, features = ["derive"] }
serde_json = { workspace =  true }
tokio = { workspace =  true, features = ["full", "tracing"] }
tokio-stream = { workspace =  true, features = ["full"] }
tokio-util = { workspace =  true }
tower = { workspace =  true }
tower-http = { workspace =  true, features = ["full"] }
tracing = { workspace =  true }
tracing-subscriber = { workspace =  true }
walkdir = { workspace =  true }
