[package]
name = "tools"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }

[[bin]]
name = "entg-auth"
path = "bin/auth/main.rs"

[[bin]]
name = "entg-db"
path = "bin/db/main.rs"

[[bin]]
name = "entg-gss"
path = "bin/gss/main.rs"

[[bin]]
name = "entg-http"
path = "bin/http/main.rs"

[dependencies]
api = { path = "../api" }
common = { path = "../common" }

anyhow = { workspace = true }
axum = { workspace =  true }
clap = { workspace = true }
futures = { workspace =  true }
futures-util = { workspace =  true }
hyper = { workspace =  true }
hyper-rustls = { workspace =  true }
hyper-util = { workspace =  true }
libgssapi = { workspace = true }
rocksdb = { workspace = true }
rustls = { workspace = true }
rustls-pki-types = { workspace = true }
rustls-webpki = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace =  true }
tokio-util = { workspace =  true }
tower = { workspace =  true }
tower-http = { workspace =  true }
x509-certificate = { workspace =  true }
