[package]
name = "webapp"
version = "0.1.0"
authors = ["alex <no@reply>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
api = { path = "../api" }
anyhow = "1.0.86"
dioxus = { version = "0.6.2", features = ["web"] }
dioxus-router = "0.6.2"
gloo-console = "0.3.0"
gloo-net = "0.6.0"
gloo-storage = "0.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"

# Debug
tracing = "0.1.41"
dioxus-logger = "0.6.2"
getrandom = { version = "0.2.15", features = ["js"] }
chrono = "0.4.39"
