[package]
name = "webapp"
version = "0.1.0"
edition = "2024"
authors = [" "]

[dependencies]
api = { path = "../api" }

anyhow = { workspace =  true }
chrono = { workspace =  true }
constcat = { workspace =  true }
dioxus = { workspace =  true, features = ["web"] }
dioxus-logger = { workspace =  true }
dioxus-router = { workspace =  true }
getrandom = { workspace =  true, features = ["js"] }
gloo-console = { workspace =  true }
gloo-net = { workspace =  true }
gloo-storage = { workspace =  true }
gloo-timers = { workspace =  true }
serde = { workspace =  true, features = ["derive"] }
serde_json = { workspace =  true }
tracing = { workspace =  true }
web-sys = { workspace =  true, features = ["Window"] }
