[package]
name = "webapp"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = [" "]

[dependencies]
api = { path = "../api" }

anyhow = { workspace =  true }
chrono = { workspace =  true }
constcat = { workspace =  true }
dioxus = { workspace =  true, features = ["web"] }
dioxus-logger = { workspace =  true }
dioxus-router = { workspace =  true }
getrandom = { workspace =  true, features = ["wasm_js"] }
gloo-console = { workspace =  true }
gloo-net = { workspace =  true }
gloo-storage = { workspace =  true }
gloo-timers = { workspace =  true }
serde = { workspace =  true, features = ["derive"] }
serde_json = { workspace =  true }
tracing = { workspace =  true }
web-sys = { workspace =  true, features = ["Window"] }
